[package]
name = "bevy_mod_picking"
version = "0.10.0"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A 3D mouse picking and raycasting plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "raycast"]
categories = ["game-engines", "rendering"]

[dependencies.bevy]
path = "../bevy"
default-features = false
features = ["render"]

[dependencies.bevy_mod_raycast]
path = "../bevy_mod_raycast"

[dev-dependencies.bevy]
path = "../bevy"
default-features = false
features = [
    "bevy_pbr",
    "bevy_winit",
    "bevy_ui",
    "bevy_core_pipeline",
    "bevy_text",
    "x11",
]

[features]
default = ["2d", "debug"]
2d = ["bevy_mod_raycast/2d"]
debug = ["bevy_mod_raycast/debug"]
